--- a/main.tex
+++ b/main.tex
@@ -19,7 +19,7 @@
 \renewcommand{\footrulewidth}{0pt}
 \addtolength{\oddsidemargin}{-0.5in}
 \addtolength{\textwidth}{1in}
-\addtolength{\topmargin}{-0.4in}  % Increased top margin slightly to balance white space
+\addtolength{\topmargin}{-0.6in}
 \addtolength{\textheight}{1.2in}
 
 \urlstyle{same}
@@ -40,12 +40,14 @@
 \begin{document}
 
 %-----------Heading-----------
-\vspace{10pt} % Adds visual top padding
+\vspace{10pt}
 \begin{center}
     {\LARGE \textbf{Swapnilshikha Bhakat}} \\
     \vspace{1pt}
     Ghatshila, Jharkhand • \href{mailto:bhakatswapnilshikha@gmail.com}{bhakatswapnilshikha@gmail.com} • +91-6200428337 \\
-    \href{https://github.com/swapnilshikha}{github.com/swapnilshikha} • \href{https://linkedin.com/in/swapnilshikha-bhakat-264221270}{linkedin.com/in/swapnilshikha}
+    \href{https://github.com/swapnilshikha}{github.com/swapnilshikha} • 
+    \href{https://linkedin.com/in/swapnilshikha-bhakat-264221270}{linkedin.com/in/swapnilshikha} • 
+    \href{https://swapnilshikha.xyz/}{swapnilshikha.xyz}
 \end{center}
 
 %-----------About-----------
@@ -100,6 +102,13 @@ Final-year B.Tech Computer Science student with a passion for web development. E
     \resitem{Developed a predictive model to assess the economic impact of climate change on Indian agriculture.}
     \resitem{Used Ridge, Lasso, Linear Regression, Decision Tree, and K-Nearest Neighbors (KNN).}
     \resitem{Strengthened Python and machine learning skills through model implementation and performance analysis.}
+  \end{itemize}
+
+  \item \textbf{Personal Portfolio Website} \hfill \href{https://swapnilshikha.xyz/}{Live Link}
+  \begin{itemize}[itemsep=2pt, topsep=1pt]
+    \resitem{Designed and deployed a personal portfolio using React.js and CSS.}
+    \resitem{Added downloadable resume and contact form with email integration.}
+    \resitem{Showcases key projects, skills, and links to GitHub/LinkedIn.}
   \end{itemize}
 
 \end{itemize}
