--- a/main.tex
+++ b/main.tex
@@ -76,18 +76,13 @@ Final-year B.Tech Computer Science student with a passion for web development. E
 \resheading{Projects}
 \begin{itemize}[leftmargin=0.15in, itemsep=8pt, topsep=1pt]
 
-  \item \textbf{DrNextDoor (MERN Stack)} \hfill \href{https://github.com/swapnilshikha/DrNextDoor}{GitHub Link}
+  \item \textbf{DrNextDoor (MERN Stack)} \hfill 
+  \href{https://github.com/swapnilshikha/DrNextDoor}{GitHub Link} • 
+  \href{https://dr-next-door-jbnk.vercel.app/}{Live Link}
   \begin{itemize}[itemsep=2pt, topsep=1pt]
     \resitem{Built a responsive Home Page in React.js with doctor listings and appointment booking.}
     \resitem{Created a secure Admin Panel using Express.js and MongoDB.}
     \resitem{Tested backend REST APIs with Postman for robust communication.}
-  \end{itemize}
-
-  \item \textbf{AWS VPC Project} \hfill \href{https://github.com/swapnilshikha/AWS-Project}{GitHub Link}
-  \begin{itemize}[itemsep=2pt, topsep=1pt]
-    \resitem{Designed a VPC with public/private subnets for secure AWS deployment.}
-    \resitem{Used Application Load Balancer and Route 53 for traffic management.}
-    \resitem{Enabled Auto Scaling for performance optimization.}
   \end{itemize}
 
   \item \textbf{Burberry Clone Website} \hfill \href{https://coding-comandoes.github.io/Burberry-Clone/}{Live Link}
@@ -97,13 +92,6 @@ Final-year B.Tech Computer Science student with a passion for web development. E
     \resitem{Collaborated with team using GitHub for version control.}
   \end{itemize}
 
-  \item \textbf{Crop Economy Prediction Model (ML)} \hfill \href{https://github.com/swapnilshikha/Climate_change_on_agriculture}{GitHub Link}
-  \begin{itemize}[itemsep=2pt, topsep=1pt]
-    \resitem{Developed a predictive model to assess the economic impact of climate change on Indian agriculture.}
-    \resitem{Used Ridge, Lasso, Linear Regression, Decision Tree, and K-Nearest Neighbors (KNN).}
-    \resitem{Strengthened Python and machine learning skills through model implementation and performance analysis.}
-  \end{itemize}
-
   \item \textbf{Personal Portfolio Website} \hfill \href{https://swapnilshikha.xyz/}{Live Link}
   \begin{itemize}[itemsep=2pt, topsep=1pt]
     \resitem{Designed and deployed a personal portfolio using React.js and CSS.}
@@ -111,7 +99,22 @@ Final-year B.Tech Computer Science student with a passion for web development. E
     \resitem{Showcases key projects, skills, and links to GitHub/LinkedIn.}
   \end{itemize}
 
+  \item \textbf{AWS VPC Project} \hfill \href{https://github.com/swapnilshikha/AWS-Project}{GitHub Link}
+  \begin{itemize}[itemsep=2pt, topsep=1pt]
+    \resitem{Designed a VPC with public/private subnets for secure AWS deployment.}
+    \resitem{Used Application Load Balancer and Route 53 for traffic management.}
+    \resitem{Enabled Auto Scaling for performance optimization.}
+  \end{itemize}
+
+  \item \textbf{Crop Economy Prediction Model (ML)} \hfill \href{https://github.com/swapnilshikha/Climate_change_on_agriculture}{GitHub Link}
+  \begin{itemize}[itemsep=2pt, topsep=1pt]
+    \resitem{Developed a predictive model to assess the economic impact of climate change on Indian agriculture.}
+    \resitem{Used Ridge, Lasso, Linear Regression, Decision Tree, and K-Nearest Neighbors (KNN).}
+    \resitem{Strengthened Python and machine learning skills through model implementation and performance analysis.}
+  \end{itemize}
+
 \end{itemize}
+
 
 %-----------Achievements-----------
 \resheading{Achievements}
@@ -124,4 +127,3 @@ Final-year B.Tech Computer Science student with a passion for web development. E
 \end{itemize}
 
 \end{document}
-
